--- a/static/index.html
+++ b/static/index.html
@@ -38,6 +38,12 @@
       border: 1px solid #2a2a2a;
     }
 
+    @media screen and (max-width: 768px) {
+      .chat-container {
+        height: 95vh;
+      }
+    }
+
     header {
       background-color: #18181B;
       padding: 20px;
@@ -117,12 +123,31 @@
     form button:hover {
       background-color: #ff8a70;
     }
-    
+
     .bi-send {
-  /* font-size: 3rem;  */
-  /* font-weight: 900;   */
-}
-  
+      /* font-size: 3rem;  */
+      /* font-weight: 900;   */
+      font-weight: 600;
+      /* margin-left: 0 !important; */
+    }
+
+    .send-text {
+      display: inline-block;
+      font-size: 1rem;
+      font-weight: 600;
+      /* margin-right: 8px; */
+      margin-bottom: 0
+    }
+
+
+    @media screen and (max-width: 768px) {
+      .send-text {
+        display: none;
+      }
+      .bi-send {
+        margin-left: 0 !important;
+      }
+    }
   </style>
 
 
@@ -142,8 +167,9 @@
       </main>
 
       <form id="chat-form">
-        <input type="text" id="user-input" placeholder="Hey I am Uma's Chat Assistant. Ask me anything" autocomplete="off" />
-        <button type="button">Send<i class="bi bi-send ms-2"></i></button>
+        <input type="text" id="user-input" placeholder="Hey I am Uma's Chat Assistant. Ask me anything"
+          autocomplete="off" />
+        <button type="button"><p class="send-text">Send</p><i class="bi bi-send ms-2"></i></button>
       </form>
     </div>
   </div>
