Mobile CSS issues fixed

--- a/static/index.html
+++ b/static/index.html
@@ -148,6 +148,22 @@
       .bi-send {
         margin-left: 0 !important;
       }
+
+      .container-fluid {
+        align-items: flex-start;
+        /* top-align */
+      }
+
+      .chat-container {
+        height: 100svh;
+        /* 100% of the small-viewport (safe) height */
+        width: 100%;
+        /* use full width */
+        margin: 0;
+        /* no top margin */
+        border-radius: 0;
+        /* optional – flush to edges */
+      }
     }
   </style>
 
