Fixed viewport issues

--- a/static/index.html
+++ b/static/index.html
@@ -155,7 +155,7 @@
       }
 
       .chat-container {
-        height: 100svh;
+        height: 100dvh;
         /* 100% of the small-viewport (safe) height */
         width: 100%;
         /* use full width */
